# sort_of_oliverb

./: CMakeLists.txt  README.md
Source/: CloudsFxEngine.h  CloudsReverb.h  OliverbReverb.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
